deleting unnecessary file and pushing file changes

--- a/hw03-rasiimwe.Rmd
+++ b/hw03-rasiimwe.Rmd
@@ -19,7 +19,7 @@ output: github_document
 
 ```{r}
 
-suppressPackageStartupMessages(library(tidyverse))
+suppressPackageStartupMessages(library(tidyverse)) d
 suppressPackageStartupMessages(library(gapminder))
 suppressPackageStartupMessages(library(ggplot2))
 suppressPackageStartupMessages(library(knitr))
